RESOLVED FIXED154165
[EFL][GTK] Fix ENABLE(SVG_OTF_CONVERTER) build
https://bugs.webkit.org/show_bug.cgi?id=154165
Summary [EFL][GTK] Fix ENABLE(SVG_OTF_CONVERTER) build
Csaba Osztrogonác
Reported 2016-02-12 05:47:57 PST
SSIA
Attachments
Patch (4.40 KB, patch)
2016-02-12 05:50 PST, Csaba Osztrogonác
no flags
Patch (5.79 KB, patch)
2016-02-12 06:00 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-02-12 05:50:17 PST
Csaba Osztrogonác
Comment 2 2016-02-12 06:00:15 PST
WebKit Commit Bot
Comment 3 2016-02-12 09:33:01 PST
Comment on attachment 271172 [details] Patch Clearing flags on attachment: 271172 Committed r196481: <http://trac.webkit.org/changeset/196481>
WebKit Commit Bot
Comment 4 2016-02-12 09:33:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.