[EFL][GTK] Fix ENABLE(SVG_OTF_CONVERTER) build https://bugs.webkit.org/show_bug.cgi?id=154165

Reviewed by Alex Christensen.

.:

* Source/cmake/OptionsEfl.cmake:
* Source/cmake/OptionsGTK.cmake:

Source/WebCore:

* CMakeLists.txt:
* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::font):
* svg/SVGToOTFFontConversion.cpp:
* svg/SVGToOTFFontConversion.h:


Canonical link: https://commits.webkit.org/172267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196481 268f45cc-cd09-0410-ab3c-d52691b4dbfc