Source/WebCore/svg/SVGToOTFFontConversion.h
@@ -26,6 +26,8 @@
 #ifndef SVGToOTFFontConversion_h
 #define SVGToOTFFontConversion_h
 
+#if ENABLE(SVG_OTF_CONVERTER)
+
 #include <wtf/Optional.h>
 #include <wtf/Vector.h>
 
@@ -37,4 +39,5 @@ Optional<Vector<char>> convertSVGToOTFFont(const SVGFontElement&);
 
 }
 
+#endif // ENABLE(SVG_OTF_CONVERTER)
 #endif
